--- a/web/ja/manual/topic/friends/eclipse/coding/templates.html
+++ b/web/ja/manual/topic/friends/eclipse/coding/templates.html
@@ -49,7 +49,7 @@ String sea = ...
 		独自に追加もできます。例えば、DBFluteオリジナルの _ll でLambda表現を補完してみましょう。
 	</p>
 <pre><span class="codetitle">e.g. DBFluteオリジナルの_llの補完テンプレート @Java</span><code>
-<span class="attribute">memberBhv</span>.selectList(<span class="literal">_ll</span>) <span class="comment">// control+space, enter</span>
+<span class="attribute">memberBhv</span>.selectList(<span class="literal">_ll</span>) <span class="comment">// _ll, control+space, enter</span>
 　↓↓↓
 <span class="attribute">memberBhv</span>.selectList([var] -&gt; {
     [var].[object]
