--- a/web/ja/manual/topic/friends/eclipse/environment/recomwork.html
+++ b/web/ja/manual/topic/friends/eclipse/environment/recomwork.html
@@ -47,7 +47,7 @@
 		<span class="frm">※ただし、ワークスペース設定として扱われても、Preferences以外の画面で設定するものもあります。</span>
 	</p>
 
-	<h2 id="templates">DBFluteの補完テンプレートを入れる</h2>
+	<h2 id="templates">補完テンプレートを入れる</h2>
 	<p>
 		Eclipseには、Javaエディター上のコード補完をカスタマイズする機能が備わっています。
 	</p>
@@ -63,7 +63,7 @@ String sea = ...
 		スムーズな実装のためにDBFluteオリジナルの補完テンプレートを提供しています。
 		DBFlute実装だけじゃなく純粋にJava実装のためのテンプレートも用意されているので、ぜひ活用しましょう。
 	</p>
-	<div class="relatedpage"><a href="../../../../../tutorial/eclipse/dfclipsecomp.html">DBFluteのEclipse補完テンプレート</a></div>
+	<div class="relatedpage"><a href="../../../../../tutorial/eclipse/dfclipsecomp.html">DBFluteのEclipseコード補完</a></div>
 <pre><span class="codetitle">e.g. DBFluteオリジナルの_llの補完テンプレート、Lambda式の入力支援 _ll (あんすこえるえる) @Java</span><code>
 <span class="attribute">memberBhv</span>.selectList(<span class="literal">_ll</span>) <span class="comment">// control+space, enter</span>
 　↓↓↓
@@ -78,11 +78,11 @@ String sea = ...
 	</p>
 	<div class="relatedpage"><a href="../../../../../lastaflute/tutorial/eclipse/laclipsecomp.html#setuptemplate">LastaFluteのEclipseコード補完 - 補完テンプレートの環境構築</a></div>
 	<p>
-		そういった指定が特にない...もしくは「わからない」なら、以下からテンプレートファイルをダウンロードして、Importのまるごと入れ替え方式で設定しましょう。
+		そういった指定が特にない...もしくは「よくわからない」なら、以下からテンプレートファイルをダウンロードして、Importのまるごと入れ替え方式で設定しましょう。
 	</p>
-	<dl class="lolongkeymainlist">
-		<dt><a href="http://dbflute.seasar.org/download/misc/settings/whole-eclipse-editor-templates.zip">whole-eclipse-editor-templates.zip</a></dt><dd><span class="frm">※最新のDBFlute補完テンプレートファイルです</span></dd>
-	</dl>
+	<p>
+		<em class="mark"><a href="http://dbflute.seasar.org/download/misc/settings/whole-eclipse-editor-templates.zip">whole-eclipse-editor-templates.zip</a></em>
+	</p>
 	<div class="relatedpage"><a href="../coding/templates.html#importwhole">エディターテンプレート - Importのまるごと入れ替え方式</a></div>
 	<h3 id="importtemplatexml">Importのまるごと入れ替え方式での設定</h3>
 	<p>
