--- a/web/ja/manual/topic/friends/eclipse/environment/workproj.html
+++ b/web/ja/manual/topic/friends/eclipse/environment/workproj.html
@@ -63,9 +63,10 @@
 	</p>
 
 	<div class="inucolumn">
-		<h2 id="recommendedwork">オススメのワークスペース設定</h2>
+		<h2 id="recommendedwork">おすすめワークスペース設定</h2>
 		<p>
 			jfluteオススメの <em class="keyword">新しいワークスペース作ったらやっておこう設定</em> を紹介しています。
+			<span class="frm">(これは共有できないので、みながワークスペースを作るときに同じことをやっていきます)</span>
 		</p>
 		<p>
 			独立ページでしっかりまとめていますので、そちらをどうぞ。
@@ -74,32 +75,15 @@
 	</div>
 
 	<div class="inucolumn">
-		<h2 id="recommendedwork">オススメのプロジェクト設定</h2>
+		<h2 id="recommendedwork">おすすめプロジェクト設定</h2>
 		<p>
-			jfluteオススメの <em class="keyword">新しいプロジェクトを作ったらやっておこう設定 </em>を紹介します。
+			jfluteオススメの <em class="keyword">新しいプロジェクトを作ったらやっておこう設定 </em>を紹介しています。
 			<span class="frm">(こちらはgitで共有できるので、最初の一人がやってしまえば後の人はやらなくて良いです)</span>
 		</p>
 		<p>
-			Package Explorer上でプロジェクトを選択して <em class="keyword">alt + enter</em> で設定ダイアログが開きます。
+			独立ページでしっかりまとめていますので、そちらをどうぞ。
 		</p>
-		<div class="relatedpage"><a href="../shortcut/operationcut.html#setting">Eclipse, 操作系ショートカット - 設定周り</a></div>
-		<dl class="keymainlist">
-			<dt>テキストエンコーディング</dt><dd>Resource の Text file encoding を <em class="mark">UTF-8</em> に</dd>
-			<dt>改行コード</dt><dd>Resource の New text file line delimiter を <em class="mark">Unix (LF)</em> に</dd>
-			<dt>コードフォーマッター</dt><dd><em class="mark"><a href="../coding/formatter.html">DBFluteスタイルのコードフォーマッターを設定</a></em></dd>
-		</dl>
-		<p>
-			一方で、.settingsの中には、プラグインが自動で出力しながらも個々のPC環境によって内容が若干変わる(ちょい残念な)設定ファイルが混じることがあります。
-		</p>
-		<p>
-			なので、.settingsディレクトリ配下に、お決まりの.gitignoreを置いています。
-		</p>
-<pre><span class="codetitle">e.g. .settingsディレクトリの.gitignore設定 @Text</span><code>
-.jsdtscope
-org.eclipse.wst.*
-org.eclipse.m2e.core.prefs
-org.eclipse.buildship.core.prefs
-</code></pre>
+		<div class="detailpage"><a href="./recomproj.html">Eclipseのおすすめプロジェクト設定</a></div>
 	</div>
 <!-- __content-end__ --></div></div>
 
