--- a/web/ja/manual/topic/friends/eclipse/index.html
+++ b/web/ja/manual/topic/friends/eclipse/index.html
@@ -69,33 +69,29 @@
 	<p>
 		Package Explorer上に表示する/しないファイルを調整できます。
 	</p>
-	<p>
-		例えば、. (ドット)で始まるファイルやディレクトリはデフォルトでは表示されないので、よく意識するようであれば表示する設定にすると良いでしょう。
-	</p>
 	<div class="detailpage"><a href="./operation/closetfile.html">Eclipse, 隠しファイルの設定</a></div>
 	<h3 id="pkgpresent">Package Explorer上のパッケージ表現</h3>
 	<p>
 		Package Explorer上のパッケージ表現をフラットにするか？階層構造にするか？選択できます。
 	</p>
-	<p>
-		デフォルトではフラットになっていますが、階層構造の方が扱いやすいと思う方は、階層構造に設定すると良いでしょう。
-	</p>
-	<div class="detailpage"><a href="./operation/pkgpresent.html">Eclipse, Package Explorer上のパッケージ表現</a></div>
+	<div class="detailpage"><a href="./operation/pkgpresent.html">Eclipse, パッケージ見た目表現</a></div>
 	<h3 id="git">Git操作</h3>
 	<p>
 		Eclipse上でGit操作ができます。
 	</p>
-	<div class="detailpage"><a href="./operation/git.html">Eclipse上でのGit操作</a></div>
+	<div class="detailpage"><a href="./operation/egit.html">Eclipse上でのGit操作</a></div>
 
 	<h2 id="environment">Eclipseの環境</h2>
 	<h3 id="workproj">ワークスペースとプロジェクト</h3>
 	<p>
 		ワークスペース設定とプロジェクト設定の違いや、よく使う設定など。
 	</p>
-	<p>
-		この違いをしっかり把握しておくことが大切です。
-	</p>
 	<div class="detailpage"><a href="./environment/workproj.html">Eclipseのワークスペースとプロジェクト</a></div>
+	<h3 id="recomwork">Eclipseのおすすめワークスペース設定</h3>
+	<p>
+		jfluteおすすめの <em class="keyword">新しいワークスペース作ったらやっておこう設定</em> を紹介します。
+	</p>
+	<div class="detailpage"><a href="./environment/recomwork.html">Eclipseのおすすめワークスペース設定</a></div>
 
 	<h2 id="plugin">Eclipseプラグイン</h2>
 	<p>
