--- a/web/ja/manual/topic/friends/maven/index.html
+++ b/web/ja/manual/topic/friends/maven/index.html
@@ -42,6 +42,32 @@
 	</p>
 
 	<h2 id="supplement">Maven補足資料</h2>
+	<h3 id="mavenrole">Mavenの役割</h3>
+	<p>
+		ざっくり言うと、依存ライブラリのバージョンを解釈して自動でダウンロードしてくれます。
+	</p>
+<pre><span class="codetitle">e.g. pom.xml concept model @Model</span><code>
+                  Java API (Stringとか) ←こいつだけじゃ足りない！
+  E                
+  c      ... <--(Download) sea-1.1.jar -> mystic-2.1.jar -> hangar-0.8.jar
+  l  M                         ↓       -> bigband-3.4.jar
+  i  2                     sea-1.5.jar -> mystic-2.4.jar -> hangar-1.7.jar
+  p  E-(直参照)-+                       -> bigband-3.7.jar -> piari-1.3.jar
+  s          +-+
+  e          |   あ  o     land-3.2.jar -> oneman-1.8.jar -> bigband-3.5.jar
+  ↓          |   ぷ /|\
+.classpath   |   り /\     piari-1.0.jar -> dstore-2.0.jar -> oneman-2.5.jar
+  ↑          +-↓
+  |           <<< pom.xml >>> ← sea と land と piari が欲しいぞと書いてある
+  |                   ↑
+  |                  M a v e n   ------------------+
+  +-(自動生成)--   (eclipse-plugin)                 ↓↓
+                                                Mavenセントラルサーバー
+                                                +------------------+
+                                                | sea.jar pom.xml  |
+                                                | land.jar pom.xml |
+                                                +------------------+
+</code></pre>
 	<h3 id="m2repo">M2_REPOの設定</h3>
 	<p>
 		Mavenコマンドから M2_REPO を設定することができます。ただし、追加後は Eclipse を再起動する必要があります。
