make LastaFlute completion template

--- a/web/ja/lastaflute/howto/action/lavalidation.html
+++ b/web/ja/lastaflute/howto/action/lavalidation.html
@@ -102,6 +102,9 @@
 		Assertの代わりのようなものと言えるでしょう
 	</p>
 	<p>
+		<span class="frm">(ただ、特に汎用的なJSON APIだとバリデーションエラーなのかクライアントエラーなのか区別せずに実装することも多いので、ちょっとレアな機能かもしれません)</span>
+	</p>
+	<p>
 		Eclipse でDBFlute補完テンプレートを入れていれば、<em class="mark">_lavcli</em> で補完できます。
 	</p>
 	<div class="relatedpage"><a href="../../tutorial/laimpl.html#ifeclipse">IDE, もし Eclipse なら...</a></div>
