--- a/web/ja/tutorial/onjava8.html
+++ b/web/ja/tutorial/onjava8.html
@@ -556,6 +556,7 @@ memberList.forEach(<span class="subpoint">member -&gt; {</span>
 	<p>
 		ということで、Eclipseで補完テンプレート (Java Editor Templates) を用意しています。
 	</p>
+	<div class="relatedpage"><a href="./eclipse/dfclipsecomp.html">DBFluteのEclipseコード補完</a></div>
 	<dl class="keymainlist">
 		<dt>_arrow <span class="frm">(_a)</span></dt><dd>-&gt; <span class="frm">※単なる矢印</span></dd>
 		<dt>_li <span class="frm">(えるあい)</span></dt><dd>var -&gt; var.xxx <span class="frm">※Lambda Inline: LikeSearch などの一行スタイル</span></dd>
