--- a/web/ja/lastaflute/tutorial/eclipse/laclipsecomp.html
+++ b/web/ja/lastaflute/tutorial/eclipse/laclipsecomp.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
-	<meta name="keywords" content="DBFlute,LastaFlute,Java,Lean Startup,Incremental Development" />
+	<meta name="keywords" content="LastaFlute,Eclipse,Completion,Editor Templates" />
 	<style type="text/css" title="currentStyle">@import "../../../../css/sub.css";</style>
 	<title>LastaFluteのEclipseコード補完 | LastaFlute</title>
 </head>
