--- a/web/ja/tutorial/eclipse/dfclipsecomp.html
+++ b/web/ja/tutorial/eclipse/dfclipsecomp.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
-	<meta name="keywords" content="DBFlute,LastaFlute,Java,Lean Startup,Incremental Development" />
+	<meta name="keywords" content="DBFlute,Eclipse,Completion,Editor Templates" />
 	<style type="text/css" title="currentStyle">@import "../../../css/sub.css";</style>
 	<title>DBFluteのEclipseコード補完 | LastaFlute</title>
 </head>
@@ -37,7 +37,7 @@
 	<p>
 		エディター上で補完文字列を打ってcontrol+space補完すると、コードが補完されます。
 	</p>
-	<div class="relatedpage"><a href="../../../manual/topic/friends/eclipse/shortcut/editorcut.html#completion">Eclipse - コード補完 (補完候補の表示)</a></div>
+	<div class="relatedpage"><a href="../../manual/topic/friends/eclipse/shortcut/editorcut.html#completion">Eclipse - コード補完 (補完候補の表示)</a></div>
 <pre><span class="codetitle">e.g. DBFluteオリジナルの_llの補完テンプレート @Java</span><code>
 <span class="attribute">memberBhv</span>.selectList(<span class="literal">_ll</span>) <span class="comment">// _ll, control+space, enter</span>
 　↓↓↓
