just fix: broken links

--- a/web/ja/manual/topic/friends/eclipse/environment/workproj.html
+++ b/web/ja/manual/topic/friends/eclipse/environment/workproj.html
@@ -25,7 +25,7 @@
 
 <div id="content"><!-- __content-start__ -->
 	<h1>Eclipseのワークスペースとプロジェクト</h1>
-	<div class="relatedpage"><a href="./index.html">Friends - Eclipse</a></div>
+	<div class="relatedpage"><a href="../index.html">Friends - Eclipse</a></div>
 	${indexlist}
 
 	<h2 id="workprojdiff">ワークスペース設定とプロジェクト設定</h2>
