--- a/web/ja/manual/topic/friends/eclipse/plugins/index.html
+++ b/web/ja/manual/topic/friends/eclipse/plugins/index.html
@@ -25,7 +25,7 @@
 
 <div id="content"><!-- __content-start__ -->
 	<h1>Eclipseプラグイン</h1>
-	<div class="relatedpage"><a href="./index.html">Friends - Eclipse</a></div>
+	<div class="relatedpage"><a href="../index.html">Friends - Eclipse</a></div>
 	${indexlist}
 
 	<h2 id="aboutplugin">Eclipseプラグインとは？</h2>
@@ -62,7 +62,7 @@
 		<dd>
 			その画面でインストールしたいプラグインの更新サイトのURLを登録・選択すると、
 			その更新サイトでインストール可能なプラグインが列挙されますので、チェックして選んでインストールします。
-			<div class="relatedpage"><a href="../../../function/helper/emecha/install.html#updatesite">EMechaのインストール - 更新サイト</a></div>
+			<div class="relatedpage"><a href="../../../../function/helper/emecha/install.html#updatesite">EMechaのインストール - 更新サイト</a></div>
 		</dd>
 		<dt>プラグインのJARファイルを dropins に配置</dt>
 		<dd>
