--- a/web/ja/manual/topic/friends/eclipse/coding/formatter.html
+++ b/web/ja/manual/topic/friends/eclipse/coding/formatter.html
@@ -25,6 +25,8 @@
 
 <div id="content"><!-- __content-start__ -->
 	<h1>Eclipseコードフォーマッター</h1>
+	<div class="relatedpage"><a href="../index.html">Friends - Eclipse</a></div>
+	<div class="relatedpage"><a href="../environment/recomwork.html">Eclipseのおすすめワークスペース設定</a></div>
 	${indexlist}
 
 	<h2 id="about">コードフォーマッターとは？</h2>
