--- a/web/ja/manual/topic/friends/eclipse/coding/templates.html
+++ b/web/ja/manual/topic/friends/eclipse/coding/templates.html
@@ -25,8 +25,8 @@
 
 <div id="content"><!-- __content-start__ -->
 	<h1>Eclipseエディターテンプレート</h1>
-	<div class="relatedpage"><a href="./index.html">Friends - Eclipse</a></div>
-	<div class="relatedpage"><a href="./environment/recomwork.html">Eclipseのおすすめワークスペース設定</a></div>
+	<div class="relatedpage"><a href="../index.html">Friends - Eclipse</a></div>
+	<div class="relatedpage"><a href="../environment/recomwork.html">Eclipseのおすすめワークスペース設定</a></div>
 	${indexlist}
 
 	<h2 id="about">エディターテンプレートとは？</h2>
