--- a/web/ja/manual/topic/friends/eclipse/operation/pkgpresent.html
+++ b/web/ja/manual/topic/friends/eclipse/operation/pkgpresent.html
@@ -25,8 +25,8 @@
 
 <div id="content"><!-- __content-start__ -->
 	<h1>Eclipse, パッケージ見た目表現</h1>
-	<div class="relatedpage"><a href="./index.html">Friends - Eclipse</a></div>
-	<div class="relatedpage"><a href="./environment/recomwork.html">Eclipseのおすすめワークスペース設定</a></div>
+	<div class="relatedpage"><a href="./.index.html">Friends - Eclipse</a></div>
+	<div class="relatedpage"><a href="./.environment/recomwork.html">Eclipseのおすすめワークスペース設定</a></div>
 	${indexlist}
 
 	<h2 id="about">パッケージ見た目表現とは？</h2>
