--- a/web/ja/tutorial/eclipse/dfclipsecomp.html
+++ b/web/ja/tutorial/eclipse/dfclipsecomp.html
@@ -75,7 +75,7 @@
 		<dt><em class="mark">_cothinking</em></dt><dd><a href="#_cothinking">Java, 悩ましい考えてるコメント // #thiking jflute xxx (2021/07/23)</a></dd>
 		<dt><em class="mark">_reardate</em></dt><dd>Java, 日付だけのコメント // (2021/07/23)</dd>
 		<dt><em class="mark">_rearuser</em></dt><dd>Java, ユーザー名だけのコメント // by jflute</dd>
-		<dt><em class="mark">_taacce</em></dt><dd>Java, タグコメント Accessor ★</dd>
+		<dt><em class="mark">_taacce</em></dt><dd><a href="#_taacce">Java, タグコメント Accessor</a> ★</dd>
 		<dt><em class="mark">_ta...</em></dt><dd>Java, その他タグコメントいっぱい</dd>
 	</dl>
 	<h4>Java, 変数定義系</h4>
