just fix: broken links

--- a/web/ja/manual/topic/friends/eclipse/environment/recomwork.html
+++ b/web/ja/manual/topic/friends/eclipse/environment/recomwork.html
@@ -28,7 +28,7 @@
 	<p>
 		jfluteおすすめの <em class="keyword">新しいワークスペース作ったらやっておこう設定</em> を紹介します。
 	</p>
-	<div class="relatedpage"><a href="./index.html">Friends - Eclipse</a></div>
+	<div class="relatedpage"><a href="../index.html">Friends - Eclipse</a></div>
 	<div class="relatedpage"><a href="./workproj.html">Eclipseのワークスペースとプロジェクト</a></div>
 	${indexlist}
 
