fix example description mistake for typedjson

--- a/web/ja/lastaflute/howto/impldesign/jsondesign.html
+++ b/web/ja/lastaflute/howto/impldesign/jsondesign.html
@@ -414,7 +414,7 @@
 	<p>
 		型をなくしたAll文字列型のJSONで、TSVのようにすべて文字列で取り扱います。nullも "" として表現します。
 	</p>
-<pre><span class="codetitle">e.g. 型ありのJSONパターンのJSON @Json</span><code>
+<pre><span class="codetitle">e.g. 型なしのJSONパターンのJSON @Json</span><code>
 {
     <span class="localvar">"productId"</span> : <span class="literal">"7"</span>
     , <span class="localvar">"productName"</span> : <span class="literal">"Sea"</span>
