upgrade plugin install description

--- a/web/ja/manual/topic/friends/eclipse/plugins/index.html
+++ b/web/ja/manual/topic/friends/eclipse/plugins/index.html
@@ -48,6 +48,9 @@
 	<dl class="textlist">
 		<dt>Eclipse Marketplaceからインストール</dt>
 		<dd>
+			Eclipseのオフィシャルサーバーからダウンロードしてインストールする方法です。
+		</dd>
+		<dd>
 			メニューの Help から、Eclipse Marketplace... を選択して、プラグインを探してインストールできます。
 		</dd>
 		<dd>
@@ -55,7 +58,9 @@
 		</dd>
 		<dt>更新サイトを利用して自動インストール</dt>
 		<dd>
-			Eclipse自身がプラグインを簡易にインストールできるようにするための仕組みを提供しています。
+			プラグイン側が提供するサーバーからダウンロードしてインストールする方法です。
+		</dd>
+		<dd>
 			メニューから [Help] - [Install New Software...]
 			を選択すると、更新サイトを利用したプラグインのインストール画面が起動します。
 		</dd>
@@ -66,11 +71,11 @@
 		</dd>
 		<dt>プラグインのJARファイルを dropins に配置</dt>
 		<dd>
-			プラグインのJARファイルをサイトからダウンロードしてきて、Eclipse自身のディレクトリ配下にある dropins
+			プラグインのJARファイルをそれぞれのプラグインのサイトからダウンロードしてきて、Eclipse自身のディレクトリ配下にある dropins
 			の [いいかんじのプラグインの名前(任意)]/eclipse/plugins/ ディレクトリ に、そのJARファイルを配置します。Eclipseの起動時に認識されます。
 		</dd>
 		<dd>
-			お決まりの複数のプラグインが手元に用意されている場合に便利です。
+			原始的ではありますが柔軟ではあるので、お決まりの複数のプラグインが手元に用意されている場合に便利です。
 		</dd>
 	</dl>
 <!-- __content-end__ --></div></div>
