use image for constructor-using-fields

--- a/web/ja/tutorial/eclipse/dfclipsecomp.html
+++ b/web/ja/tutorial/eclipse/dfclipsecomp.html
@@ -345,6 +345,16 @@ seaList.stream().filter(<span class="abbreviation">...</span>).collect(Collector
     <span class="keyword">this</span>.<span class="attribute">sea</span> = <span class="localvar">sea</span>;
 }
 </code></pre>
+	<p>
+		主にImmutableのクラスを作るときなどに役に立ちます。
+	</p>
+	<p>
+		この補完でfinalのインスタンス変数を作った後に、今度はコンストラクタを自動生成する補完を使うと良いでしょう。
+		直接のショートカットではありませんが、できるだけ早く補完する方法があります。
+	</p>
+	<p class="imgbox">
+		<a href="../../data/model/friends/eclipse/shortcut/friends-Eclipse-Shortcut-constructor-using-fields.png" title="Eclipse Shortcut constructor using fields"><img src="../../data/model/friends/eclipse/shortcut/friends-Eclipse-Shortcut-constructor-using-fields.png" alt="Eclipse Shortcut constructor using fields" width="520" height="460" /></a>
+	</p>
 	<h3 id="_pubstafin">public static finalの定数を補完 <span class="frm">(_pubstafin)</span> ★</h3>
 	<p>
 		<em class="keyword">_pubstafin</em> (PUBlic の STAtic FINal)
