just fix: how to preferences

--- a/web/ja/manual/topic/friends/eclipse/environment/recomwork.html
+++ b/web/ja/manual/topic/friends/eclipse/environment/recomwork.html
@@ -37,8 +37,12 @@
 		ワークスペース設定は、<em class="mark">Preferences</em> という名前で設定画面が用意されています。
 	</p>
 	<p>
-		(Macなら) Preferencesの設定画面は <em class="keyword">command+,(カンマ)</em> で開きます。
+		Preferencesの設定画面は、以下の方法で開くことができます。
 	</p>
+	<dl class="valuemainlist">
+		<dt>Macなら</dt><dd><em class="keyword">command+,(カンマ)</em> <span class="frm">(メニューの Eclipse - 環境設定... と同じ)</span></dd>
+		<dt>Windowsなら</dt><dd>メニューの Window - Preferences</dd>
+	</dl>
 	<div class="relatedpage"><a href="../shortcut/operationcut.html#setting">Eclipse, 操作系ショートカット - 設定周り</a></div>
 	<p class="imgbox">
 		<a href="../../../../../data/model/friends/eclipse/operation/friends-Eclipse-Preferences-dialog-example.png" title="Eclipse Preferences dialog example"><img src="../../../../../data/model/friends/eclipse/operation/friends-Eclipse-Preferences-dialog-example.png" alt="Eclipse Preferences dialog example" width="550" height="440" /></a>
