--- a/web/ja/manual/topic/friends/eclipse/shortcut/operationcut.html
+++ b/web/ja/manual/topic/friends/eclipse/shortcut/operationcut.html
@@ -36,7 +36,12 @@
 	<dl class="textlist">
 		<dt>ワークスペースの設定 (Preferences)</dt>
 		<dd>
-			Macなら <em class="keyword">command + , (カンマ)</em>
+			Macなら <em class="keyword">command + , (カンマ)</em> <span class="frm">(メニューの Eclipse - 環境設定... と同じ)</span>
+		</dd>
+		<dd>
+			Windowsでは直接のショートカットがないですが、メニューの Window - Preferences
+			で行けるので、Windows特有のアルファベットによるショートカットでスムーズに開くこともできます。
+			<span class="frm">(alt + W + P だったかな?)</span>
 		</dd>
 		<dt>プロジェクトのプロパティ (Properties)</dt>
 		<dd>プロジェクトを選択して <em class="keyword">alt + enter</em></dd>
