--- a/web/ja/manual/topic/friends/eclipse/operation/git/egitclone.html
+++ b/web/ja/manual/topic/friends/eclipse/operation/git/egitclone.html
@@ -31,12 +31,36 @@
 
 	<h2 id="clonedir">(0. clone先ディレクトリの設定)</h2>
 	<p>
-		TODO jflute Preferences - Version Control (Team) - Git
+		まず、clone先ディレクトリの設定をしておきます。ワークスペース設定なので、同じワークスペースでの２回目以降のgit cloneのときは設定する必要はありません。
+	</p>
+	<p>
+		Eclipseのワークスペース設定である Preferences を開きましょう。
+	</p>
+	<dl class="valuemainlist">
+		<dt>Macなら</dt><dd><em class="keyword">command+,(カンマ)</em> <span class="frm">(メニューの Eclipse - 環境設定... と同じ)</span></dd>
+		<dt>Windowsなら</dt><dd>メニューの Window - Preferences</dd>
+	</dl>
+	<div class="relatedpage"><a href="../../shortcut/operationcut.html#setting">Eclipse, 操作系ショートカット - 設定周り</a></div>
+	<p class="imgbox">
+		<a href="../../../../../../data/model/friends/eclipse/operation/friends-Eclipse-Preferences-dialog-example.png" title="Eclipse Preferences dialog example"><img src="../../../../../../data/model/friends/eclipse/operation/friends-Eclipse-Preferences-dialog-example.png" alt="Eclipse Preferences dialog example" width="550" height="440" /></a>
+	</p>
+	<p>
+		<em class="keyword">Version Control (Team) - Git</em> の <em class="mark">Default repository folder</em>
+		を、いま Eclipse で扱っている workspaceディレクトリにするのがオススメです。<span class="frm">(workspaceディレクトリにgit cloneされるように)</span>
+	</p>
+	<p>
+		Browse... ボタンから、workspaceディレクトリを選択しましょう。
+	</p>
+	<p class="imgbox">
+		<a href="../../../../../../data/model/friends/eclipse/operation/git/friends-Eclipse-GitPreferences-clone-directory.png" title="Eclipse GitPreferences clone-directory"><img src="../../../../../../data/model/friends/eclipse/operation/git/friends-Eclipse-GitPreferences-clone-directory.png" alt="Eclipse GitPreferences clone-directory" width="550" height="380" /></a>
+	</p>
+	<p>
+		<span class="frm">※もし、自身のPC内でのclone先ポリシーがあるのであれば、それに合わせましょう。</span>
 	</p>
 
 	<h2 id="gitperspective">1. Git Perspectiveを開く</h2>
 	<p>
-		TODO jflute 右上の+ボタンで Git Perspective を Open します。
+		右上の＋アイコンで Git Perspective を Open します。
 	</p>
 	<p class="imgbox">
 		<a href="../../../../../../data/model/friends/eclipse/operation/git/friends-Eclipse-GitPerspective-add-button.png" title="Eclipse GitPerspective add-button"><img src="../../../../../../data/model/friends/eclipse/operation/git/friends-Eclipse-GitPerspective-add-button.png" alt="Eclipse GitPerspective add-button" width="520" height="360" /></a>
