just fix: control click & right click

--- a/web/ja/manual/topic/friends/eclipse/operation/git/egitclone.html
+++ b/web/ja/manual/topic/friends/eclipse/operation/git/egitclone.html
@@ -90,7 +90,7 @@
 		<dt>想定されるURL形式</dt><dd>https://[...]/[...][...].git</dd>
 	</dl>
 	<p>
-		その状態で、Git Repositories View で右クリックして、Paste Repository Path or URI を選択します。
+		その状態で、Git Repositories View で controlクリック (右クリック) して、Paste Repository Path or URI を選択します。
 		<span class="frm">(Git Repositories View にカーソルを当ててペースト(Macならcommand+v)でもOKです)</span>
 	</p>
 	<p class="imgbox">
